--- a/flow/app/log_out.yaml
+++ b/flow/app/log_out.yaml
@@ -15,8 +15,8 @@ steps:
       income:
       schedule:
       option:
+      app_user_id:
       payment_day:
-      logged_in:
   - orb_header:
   - header:
       title: Log out
